tests/fixtures/typeck/if_branch_type_mismatch.veyl
fn main() {
    let value = if true {
        1
    } else {
        false
    };
}
